# tony-algos

./: CrossEntropyTest.py  LinearRgressionTf.py  README.md  csvreadtextline.py  graphop.py  myestimator.py  use_numpy_input_fn.py
Kmeans/: README.doc  kmeans.py
SVM/: Generate_label_data.py  README.doc  ViewData.py  WISDM_ar_v1.1_raw_svm.txt  raw_test.txt  raw_train.txt  ~$README.doc
SVM/libsvm-3.23/python/: predict.py  predict2.py
SVM/libsvm-3.23/tools/: grid.py
SVM/parameter_tunning/: tu.py
StepCounting/: README.doc  data.py  fft.py  jieshu.py  squarexyz.py  walking1.txt
image/: cnn.py
image/SSD/: README.doc
image/cifar10/: c10.py  c10res.py  cifar10_input.py
image/cifar10/cifar10/: 1.py  2.py  Download.py  cifar10_input.py
image/cifar10/vgg/: 1.py  README  cifar10_input.py  main.py  vgg19.py
image/yov1-tiny/: README  README.doc  config.py  img_data.py  main.py  yl_v1_tiny.py  yolov1_strct.txt
image/yov1-tiny/example/: train.py
image/yov3/: README.doc  yolov3-voc_struct.txt
image/yov3/K-means/: data_cache_file.pkl  kmeans.py  kmeans_getdata.py
image/yov3/mAp/: README.doc
knn/: README.doc  knn.py
linearregression/: IncomingPre.py  LinearRgression.py  README  explicitkernelmethods.py
mytracking/: CMakeLists.txt  README  comp.txt  gdbinit_bak  git_template  his.cpp  lkdemo.cpp  main  main.cpp  mat.cpp  prop  pyramid  pyramid.cpp
mytracking/src/: main.cpp  mat.cpp  prop.cpp  split.cpp
tk/: CMakeLists.txt  README  VHDCMakeLists.txt
tk/inc/: comm.hpp  debug.hpp  framediff.hpp  lk.hpp
tk/src/: framediff.cpp  pyramid.cpp  read.c  v.cpp  video.cpp
(+3 files in other folders)
